--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Monitoramento Astronômico em Tempo Real</h1>
+        <h1>Monitoramento Astronômico</h1>
     </header>
     <main>
         <section id="filter">
